<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/billAmountLabel"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billAmountLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/percentLabel"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountLabel" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="47dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/percentTextView"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/percentLabel"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="41dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipLabel"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="107dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipTextView"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/tipLabel"
        app:layout_constraintTop_toBottomOf="@+id/percentTextView" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="56dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/totalLabel"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel" />

    <TextView
        android:id="@+id/TotalTextView"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/TotalTextView"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toEndOf="@+id/totalLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnSub"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/percentTextView"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:text="@string/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>